高分权重功能添加分数排序提示, 调整购物车总分位置, 购物车自动计算连衣裙/上下装

--- a/style.css
+++ b/style.css
@@ -178,6 +178,10 @@ div.announcement {
 	cursor: pointer;
 	display: none;
 }
+.weightContainer .highscore-rank{
+	font-weight: bold;
+	display: none;
+}
 .weightContainer .highscore-link.active{
 	color: DeepPink;
 }
