--- a/style.css
+++ b/style.css
@@ -254,6 +254,14 @@ td.deps [tooltip]:after {
 	color: red;
 	font-weight:bold;
 }
+.is_f{
+	color: red;
+	font-weight:bold;
+}	
+.not_f{
+	color: lightgreen;
+	font-weight:bold;
+}	
 .gongzhuSkill{
 	color: fuchsia;
 	font-weight:bold;
