--- a/style.css
+++ b/style.css
@@ -15,6 +15,16 @@ input[type="checkbox"]{
 	vertical-align:middle;
 	margin: auto;
 }
+.checkbox{	
+   display: inline-block;
+}
+.table{
+	margin-bottom: 0;
+}
+.nav-tabs.nav-justified>li {
+    display: table-cell;
+    width: 1%;
+}
 /************************/
 
 #filtersTop select{
@@ -157,4 +167,11 @@ div.announcement {
 	padding: 5px;
 	max-height: 280px;
 	overflow: auto;
+}
+div#showmore {
+	text-align: center;
+	padding: 0.6em;
+	border-bottom: 1px solid #f3f0f6;
+	color: #0984ff;
+	cursor: pointer;
 }
