--- a/biguse.css
+++ b/biguse.css
@@ -4,4 +4,7 @@
     width: 100px;
     background-position-x: -5px;
     background-position-y: -50px;
+	position: fixed;
+	border: 2px solid #000;
+	background-color: #fff;
 }
