--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ input[type="checkbox"]{
     width: 1%;
 }
 
-.nav-tabs.nav-justified>li#荧光之灵 a {
+.nav-tabs.nav-justified>li#萤光之灵 a {
 	min-width: 65px;
 }
 fieldset {
