--- a/ui.css
+++ b/ui.css
@@ -47,6 +47,9 @@
 	vertical-align: middle;
 	transition: color 0.2s;
 }
+.table-td.SSS {
+  color: #A6F;
+}
 .table-td.SS {
   color: #E81;
 }
@@ -80,6 +83,16 @@
 .table-td.name.own .button{
   background-color: #bfb;
 }
+.table-td.name.search {
+  float: left;
+  border-radius: 0.2em;
+}
+.table-td.name.searchCate .button {
+  color: #fff;
+  background-color: #337ab7;
+  border-color: #2e6da4;
+  cursor: default;
+}
 
 [tooltip]:before {
 	content : '★';
@@ -103,4 +116,8 @@
 }
 .table-td.deps [tooltip]:after {
   background-color: #ddf;
+}
+
+#searchResultList {
+  line-height:2em;
 }
