--- a/onekeystrategy.css
+++ b/onekeystrategy.css
@@ -1,8 +1,9 @@
 .strategy_info_div{
-	font-family:\5fae\8f6f\96c5\9ed1;
 	border: 1px solid grey;
 	width: 65%;
 	padding: 5px;
+	resize:both;
+	overflow:auto;
 }
 
 @media only screen and (max-width: 650px){
@@ -19,14 +20,14 @@
 }
 
 .stgy_title_eng{
-	font-size: 20;
+	font-size: 20px;
 	font-family:Comic Sans MS;
 	font-style: italic;
 }
 
 .stgy_title{
 	font-family: \5e7c\5706;
-	font-size: 22;
+	font-size: 22px;
 	font-weight: bold;
 	color: DeepPink;
 }
